<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>helloworld</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>docker-build</packaging>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.henry.App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.34.1</version>
                <extensions>true</extensions>
                <configuration>
                    <images>
                        <image>
                            <name>dockeronmac/%a:%l</name>
                            <run>
                                <wait>
                                    <log>Hello World!</log>
                                </wait>
                            </run>
                        </image>
                    </images>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>base-open-jdk</id>
            <activation>
                <file>
                    <missing>target/openjdk-11-base_linux-x64</missing>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>jdk-base-module</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>prepare-package</phase>
                                <configuration>
                                    <executable>docker</executable>
                                    <arguments>
                                        <argument>run</argument>
                                        <argument>--rm</argument>
                                        <argument>--volume</argument>
                                        <argument>${project.build.directory}:/out</argument>
                                        <argument>adoptopenjdk/openjdk11:debian-slim</argument>
                                        <argument>jlink</argument>
                                        <argument>--module-path</argument>
                                        <argument>/opt/jdk-11/jmods</argument>
                                        <argument>--add-modules</argument>
                                        <argument>java.base</argument>
                                        <argument>--compress</argument>
                                        <argument>2</argument>
                                        <argument>--no-header-files</argument>
                                        <argument>--output</argument>
                                        <argument>/out/openjdk-11-base_linux-x64</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>